<?xml version="1.0"?>
<package format="3">
  <name>multi_map_nav</name>
  <version>0.0.0</version>
  <description>Multi-map navigation with custom action</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sqlite3_vendor</depend>
  <depend>multi_map_nav_interfaces</depend> <!-- Add this -->
  <depend>std_srvs</depend>


  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

